--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
 # Supabase Configuration
 # Replace these with your actual Supabase project credentials
-# Get them from: https://supabase.com/dashboard/project/_/settings/api
+# Get them from: 
 
 VITE_SUPABASE_URL=https://fufgeiwcrsqbmqecywav.supabase.co
-VITE_SUPABASE_PUBLISHABLE_KEY=sb_publishable_oMvd8vMP0wYPzl1cxK1qTg_VdufMZUQ
+VITE_SUPABASE_PUBLISHABLE_KEY=
 
 # Gemini API Configuration (optional - for AI features)
-VITE_GEMINI_API_KEY=AIzaSyBMkjLM1637JIJGCn3EhbrL_hvU6TXSYbA
+VITE_GEMINI_API_KEY=
 
 # Paystack Configuration (for payment processing)
 # Get your public key from: https://dashboard.paystack.com/#/settings/developers
-VITE_PAYSTACK_PUBLIC_KEY=pk_test_53c514cfe41f33c0f9515ef6be3f61571e7f1768
+VITE_PAYSTACK_PUBLIC_KEY=
