--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Replace these with your actual Supabase project credentials
 # Get them from: 
 
-VITE_SUPABASE_URL=https://fufgeiwcrsqbmqecywav.supabase.co
+VITE_SUPABASE_URL=
 VITE_SUPABASE_PUBLISHABLE_KEY=
 
 # Gemini API Configuration (optional - for AI features)
